@@ -3337,6 +3337,9 @@ changes to the command language don't have a high cost in pain to
 users, and the maintainers feel free to make them whenever improvement
 seems possible.  But just in case, such changes are recorded here.
 
+Filter syntax now subcommand vers rather than the options of 4.23 and
+earlier.
+
 In versions 4.23 and earlier, it was possible to redirect output from
 msgin to capture a mailbox of changed entries. This feature has been
 removed; msgin now sets =Q bits which can be used to generatew the
