@@ -1,4 +1,4 @@
-## Test backreference substitution in filter --regexp
+## Test backreference substitution in filter regexp
 read <<EOF
 blob
 mark :1
@@ -16,6 +16,6 @@ s12345 s45678 s21456
 M 100644 :1 README
 EOF
 # EXPECT 'rb:\1' should be 'rb:12345' (the substitution /s(\d+)/\1/)
-(=C) filter --regex /s(\d+)/rb:\1/1
+(=C) filter regex /s(\d+)/rb:\1/1
 (=C) msgout
 write -
