@@ -12,6 +12,7 @@ Repository head::
      The =Q set now provides a way to inspect recently modified events.
      The "edit" and "references edit" commands gave been retired.
      Subcommand moves to before first argument in branch/path/tag/reset commands.
+     Filter syntax now uses subcommands rather than options.
 
 4.23: 2021-01-13::
      Branch rename can take a regexp and do substitutions on the new name(s).
